import { parseFilter } from "@plumier/filter-parser"


describe("Filter Parser", () => {
    function comparison(opr: string) {
        it("Should able to compare property with number", () => {
            expect(parseFilter(`column${opr}12345234554`)).toMatchSnapshot()
            expect(parseFilter(`column${opr}123452.234`)).toMatchSnapshot()
        })
        it("Should able to compare property with boolean", () => {
            expect(parseFilter(`column${opr}true`)).toMatchSnapshot()
            expect(parseFilter(`column${opr}false`)).toMatchSnapshot()
        })
        it("Should able to compare property with string", () => {
            expect(parseFilter(`column${opr}"lorem ipsum"`)).toMatchSnapshot()
            expect(parseFilter(`column${opr}'lorem ipsum'`)).toMatchSnapshot()
        })
        it("Should skip white space", () => {
            expect(parseFilter(` column  ${opr}  12345  `)).toMatchSnapshot()
        })
        it("Should not allow property name start with number", () => {
            expect(() => parseFilter(`12column${opr}12345234554`)).toThrowError()
        })
        it("Should allow property name ends with number", () => {
            expect(parseFilter(`column123${opr}12345234554`)).toMatchSnapshot()
        })
        it("Should allow property name with underscore", () => {
            expect(parseFilter(`column_123${opr}12345234554`)).toMatchSnapshot()
        })
        it("Should able to use swap position of property and value", () => {
            expect(parseFilter(`1234${opr}column`)).toMatchSnapshot()
        })
    }

    describe(`Equal Parser`, () => { comparison("=") })
    describe(`Not Equal Parser`, () => { comparison("<>") })
    describe(`Greater Than Parser`, () => { comparison(">") })
    describe(`Less Than Parser`, () => { comparison("<") })
    describe(`Greater Than Equal Parser`, () => { comparison(">=") })
    describe(`Less Than Equal Parser`, () => { comparison("<=") })
    describe(`Like Parser`, () => {
        it("Should throw when compare property with number", () => {
            expect(() => parseFilter(`column like 12345234554`)).toThrowError()
            expect(() => parseFilter(`column like 123452.234`)).toThrowError()
        })
        it("Should throw when compare property with boolean", () => {
            expect(() => parseFilter(`column like true`)).toThrowError()
            expect(() => parseFilter(`column like false`)).toThrowError()
        })
        it("Should able to compare property with string", () => {
            expect(parseFilter(`column like "lorem ipsum"`)).toMatchSnapshot()
            expect(parseFilter(`column like 'lorem ipsum'`)).toMatchSnapshot()
        })
        it("Should skip white space", () => {
            expect(parseFilter(` column   like   'lorem ipsum'  `)).toMatchSnapshot()
        })
        it("Should not allow property name start with number", () => {
            expect(() => parseFilter(`12column like 'lorem ipsum'`)).toThrowError()
        })
        it("Should allow property name ends with number", () => {
            expect(parseFilter(`column123 like 'lorem ipsum'`)).toMatchSnapshot()
        })
        it("Should allow property name with underscore", () => {
            expect(parseFilter(`column_123 like 'lorem ipsum'`)).toMatchSnapshot()
        })
    })

    describe("Between Parser", () => {
        it("Should able to compare property with number", () => {
            expect(parseFilter(`column between 100 and 200`)).toMatchSnapshot()
            expect(parseFilter(`column between 100.20 and 200.20`)).toMatchSnapshot()
        })
        it("Should throw when compare property with boolean", () => {
            expect(() => parseFilter(`column between true and false`)).toThrowError()
            expect(() => parseFilter(`column between false and false`)).toThrowError()
        })
        it("Should able to compare property with string", () => {
            expect(parseFilter(`column between "2000-1-1" and "2020-1-1"`)).toMatchSnapshot()
            expect(parseFilter(`column between '2000-1-1' and '2020-1-1'`)).toMatchSnapshot()
        })
        it("Should skip white space", () => {
            expect(parseFilter(` column   between   100.20   and    200.20  `)).toMatchSnapshot()
        })
        it("Should not confused when piped with AND operator", () => {
            expect(parseFilter(`column between 100.20 and 200.20 and otherColumn = 300`)).toMatchSnapshot()
        })
    })


    function logic(opr: string) {
        it("Should able to group comparisons", () => {
            expect(parseFilter(`column=12345234554 ${opr} column="lorem ipsum"`)).toMatchSnapshot()
        })
        it("Should case insensitive", () => {
            expect(parseFilter(`column=12345234554 ${opr.toUpperCase()} column="lorem ipsum"`)).toMatchSnapshot()
        })
        it("Should able to pipe logical expression", () => {
            expect(parseFilter(`column=1 ${opr} column=2 ${opr} column=3`)).toMatchSnapshot()
        })
        it("Should skip white space", () => {
            expect(parseFilter(`column=12345234554    ${opr}   column="lorem ipsum"`)).toMatchSnapshot()
        })
    }

    describe("And Parser", () => { logic("and") })
    describe("Or Parser", () => { logic("or") })

    describe("Group Parser", () => {
        it("Should able to group comparison", () => {
            expect(parseFilter(`(column=12345234554)`)).toMatchSnapshot()
        })
        it("Should able to group logic", () => {
            expect(parseFilter(`(column=12345234554 and column="lorem ipsum")`)).toMatchSnapshot()
        })
        it("Should prioritized group", () => {
            expect(parseFilter(`column=1 and (column=2 and column=3)`)).toMatchSnapshot()
            expect(parseFilter(`column=1 and (column=2 and column=3) and column=4`)).toMatchSnapshot()
        })
    })

    describe("Not Parser", () => {
        it("Should able to use not with expression", () => {
            expect(parseFilter(`not column=12345234554`)).toMatchSnapshot()
        })
        it("Should able to use not with column", () => {
            expect(parseFilter(`not column`)).toMatchSnapshot()
        })
        it("Should prioritized than binary expression", () => {
            expect(parseFilter(`column=123 and not column=12345234554`)).toMatchSnapshot()
        })
    })

})
